infra/k8s/events-depl.yaml
#Pod Creation
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: events
  template:
    metadata:
       labels:
        app: events
    spec:
       containers:
         - name: events
           image: snuus/events
---
#Cluster IP
apiVersion: v1
kind: Service
metadata:
  name: events-clusterip-srv
spec:
  selector:
    app: events
  ports: 
    - name: events 
      protocol: TCP
      port: 4005
      targetPort: 4005
